--- a/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
+++ b/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
@@ -37,6 +37,9 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="MailAddress.cs" />
+    <Compile Include="MailAttachment.cs" />
+    <Compile Include="MailMessage.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="PositionErrorEventArgs.cs" />
     <Compile Include="PositionEventArgs.cs" />
