--- a/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
+++ b/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
@@ -63,7 +63,11 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DeviceInfo.cs" />
+    <Compile Include="NetworkService.cs" />
+    <Compile Include="FileViewer.cs" />
     <Compile Include="MailService.cs" />
+    <Compile Include="NetworkConnectionBroadcastReceiver.cs" />
     <Compile Include="PhoneService.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
