--- a/Samples/Samples.iOS/Samples.iOS.csproj
+++ b/Samples/Samples.iOS/Samples.iOS.csproj
@@ -54,6 +54,20 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <MtouchSdkVersion>7.1</MtouchSdkVersion>
+    <MtouchLink>SdkOnly</MtouchLink>
+    <MtouchDebug>False</MtouchDebug>
+    <MtouchProfiling>False</MtouchProfiling>
+    <MtouchExtraArgs />
+    <MtouchFastDev>False</MtouchFastDev>
+    <MtouchEnableGenericValueTypeSharing>True</MtouchEnableGenericValueTypeSharing>
+    <MtouchArch>Default, ARMv7</MtouchArch>
+    <MtouchUseLlvm>False</MtouchUseLlvm>
+    <MtouchUseThumb>False</MtouchUseThumb>
+    <MtouchUseSGen>False</MtouchUseSGen>
+    <MtouchUseRefCounting>False</MtouchUseRefCounting>
+    <MtouchOptimizePNGs>True</MtouchOptimizePNGs>
+    <MtouchI18n />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
     <DebugType>none</DebugType>
@@ -90,14 +104,6 @@
       <Project>{1ed7e825-98ed-4740-8dd7-96e4aa3f1128}</Project>
       <Name>Acr.XamForms.BarCodeScanner</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Acr.XamForms.DeviceInfo.iOS\Acr.XamForms.DeviceInfo.iOS.csproj">
-      <Project>{fd60e343-6dad-4164-aac2-70b4d8d00ef5}</Project>
-      <Name>Acr.XamForms.DeviceInfo.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Acr.XamForms.DeviceInfo\Acr.XamForms.DeviceInfo.csproj">
-      <Project>{62822de8-ceb9-4602-b780-84e9e3d11b88}</Project>
-      <Name>Acr.XamForms.DeviceInfo</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Acr.XamForms.Mobile.iOS\Acr.XamForms.Mobile.iOS.csproj">
       <Project>{a2908b9c-d5d0-4715-851d-3eb81ab2e452}</Project>
       <Name>Acr.XamForms.Mobile.iOS</Name>
@@ -105,14 +111,6 @@
     <ProjectReference Include="..\..\Acr.XamForms.Mobile\Acr.XamForms.Mobile.csproj">
       <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
       <Name>Acr.XamForms.Mobile</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Acr.XamForms.Network.iOS\Acr.XamForms.Network.iOS.csproj">
-      <Project>{e23d6213-060d-4fd3-9f9d-f49f55f4db68}</Project>
-      <Name>Acr.XamForms.Network.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Acr.XamForms.Network\Acr.XamForms.Network.csproj">
-      <Project>{3b14346e-92d8-425c-aa46-7dfc88cc6f1c}</Project>
-      <Name>Acr.XamForms.Network</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Acr.XamForms.Settings.iOS\Acr.XamForms.Settings.iOS.csproj">
       <Project>{0f210fae-78bb-4d1a-bcc8-ecdabb99ecc0}</Project>
