--- a/Samples/Samples/Samples.csproj
+++ b/Samples/Samples/Samples.csproj
@@ -35,9 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Models\MenuItem.cs" />
     <Compile Include="Models\Signature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BarCodeViewModel.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\SignaturePadConfigViewModel.cs" />
     <Compile Include="ViewModels\DeviceInfoViewModel.cs" />
     <Compile Include="ViewModels\SignatureListViewModel.cs" />
@@ -112,17 +114,9 @@
       <Project>{1ed7e825-98ed-4740-8dd7-96e4aa3f1128}</Project>
       <Name>Acr.XamForms.BarCodeScanner</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Acr.XamForms.DeviceInfo\Acr.XamForms.DeviceInfo.csproj">
-      <Project>{62822de8-ceb9-4602-b780-84e9e3d11b88}</Project>
-      <Name>Acr.XamForms.DeviceInfo</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Acr.XamForms.Mobile\Acr.XamForms.Mobile.csproj">
       <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
       <Name>Acr.XamForms.Mobile</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Acr.XamForms.Network\Acr.XamForms.Network.csproj">
-      <Project>{3b14346e-92d8-425c-aa46-7dfc88cc6f1c}</Project>
-      <Name>Acr.XamForms.Network</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Acr.XamForms.Settings\Acr.XamForms.Settings.csproj">
       <Project>{90ab40eb-c012-482c-8c61-fcf2ba56fb60}</Project>
