--- a/Acr.XamForms.Mobile.iOS/Acr.XamForms.Mobile.iOS.csproj
+++ b/Acr.XamForms.Mobile.iOS/Acr.XamForms.Mobile.iOS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="PhoneService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reachability.cs" />
+    <Compile Include="TextToSpeechService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
