--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -2,18 +2,17 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.SignaturePad</id>
-        <version>1.0.0-beta</version>
-        <title>MvvmCross Signature Pad Plugin</title>
+        <version>1.0.0</version>
+        <title>Xamarin Forms Signature Pad</title>
         <description>Signature Pad for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
-        <projectUrl>https://github.com/aritchie/mvvm-signature-pad</projectUrl>
+        <projectUrl>https://github.com/aritchie/acr-xamarin-forms</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin forms signaturepad</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="3.1.1" />
-            <dependency id="MvvmCross.HotTuna.Plugin.Color" version="3.1.1" />
+            <dependency id="Xamarin.Forms" version="[1.0, 1.1)" />
         </dependencies>
         <releaseNotes>
 1.0
@@ -31,12 +30,13 @@ Initial Release
         
         <!-- touch -->
         <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.dll" />
-        <file src="..\bin\Release\MonoTouch\Acr.XamForms.SignaturePad.Touch.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" />
+        <file src="..\bin\Release\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" />
         <file src="..\bin\Release\MonoTouch\SignaturePad.iOS.dll" target="lib\MonoTouch\SignaturePad.iOS.dll" />
         
         <!--winphone-->
-        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\wp8\Acr.XamForms.SignaturePad.dll" />
+        <!--TODO: manually build winphone library-->
+        <!--<file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\wp8\Acr.XamForms.SignaturePad.dll" />
         <file src="..\bin\Release\WinPhone\Acr.XamForms.SignaturePad.WindowsPhone.dll" target="lib\wp8\Acr.XamForms.SignaturePad.WindowsPhone.dll" />
-        <file src="..\bin\Release\MonoAndroid\SignaturePad.WinPhone.dll" target="lib\MonoTouch\SignaturePad.WinPhone.dll" />
+        <file src="..\bin\Release\WinPhone\SignaturePad.WinPhone.dll" target="lib\WinPhone\SignaturePad.WinPhone.dll" />-->
     </files>
 </package>
