* Update to Xamarin.Forms 1.1.0.6201 * Fix settings to use shared library since DependencyService does resolve unless inheriting directly from interface * Fix samples with converters * Custom view renderer for signature pad in iOS & Android * User dialogs is beginning to get direct interface

--- a/Acr.XamForms.Settings/Acr.XamForms.Settings.csproj
+++ b/Acr.XamForms.Settings/Acr.XamForms.Settings.csproj
@@ -63,11 +63,9 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="AbstractSettingsService.cs" />
-    <Compile Include="ISettingsService.cs" />
-    <Compile Include="ObservableDictionary.cs" />
+    <Compile Include="ISettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingsServiceExtensions.cs" />
+    <Compile Include="SettingsExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
