* A bindable listview & picker * Improved settings * Adding translate markup extension for later.  Based on conceptdev with added injection point

--- a/Acr.XamForms.Settings/Acr.XamForms.Settings.csproj
+++ b/Acr.XamForms.Settings/Acr.XamForms.Settings.csproj
@@ -64,6 +64,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ISettings.cs" />
+    <Compile Include="ISettingsDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsExtensions.cs" />
   </ItemGroup>
