--- a/Acr.XamForms/Acr.XamForms.csproj
+++ b/Acr.XamForms/Acr.XamForms.csproj
@@ -39,17 +39,17 @@
     </Compile>
     <Compile Include="Collections\ObjectModel\ObservableDictionary.cs" />
     <Compile Include="Converters\FileSizeConverter.cs" />
-    <Compile Include="Converters\ImageBytesConverter.cs" />
     <Compile Include="Converters\InverseBoolConverter.cs" />
     <Compile Include="Converters\TimeAgoConverter.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="MarkupExtensions\TranslateMarkupExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
+    <Compile Include="Views\ListView.cs" />
+    <Compile Include="Views\Picker.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
       <HintPath>..\packages\Xamarin.Forms.1.1.0.6201\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Core.dll</HintPath>
