Nuspec updates Adding logger interface Adding interface for observable dictionary

--- a/Acr.XamForms.Mobile.WindowsPhone/Acr.XamForms.Mobile.WindowsPhone.csproj
+++ b/Acr.XamForms.Mobile.WindowsPhone/Acr.XamForms.Mobile.WindowsPhone.csproj
@@ -88,6 +88,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="FileViewer.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="MailService.cs" />
     <Compile Include="PhoneService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
