--- a/nuspec/Acr.XamForms.Settings.nuspec
+++ b/nuspec/Acr.XamForms.Settings.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>Acr.XamForms.Settings</id>
         <version>1.0.0</version>
-        <title>Xamarin Forms Settings</title>
+        <title>Settings for Xamarin Forms</title>
         <description>Settings platform plugin for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
@@ -12,7 +12,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin forms settings</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.0, 1.1)" />
+            <dependency id="Xamarin.Forms" version="[1.0, 2.0)" />
             <dependency id="Newtonsoft.Json" version="[6, 7)" />
         </dependencies>
         <releaseNotes>
