--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>Acr.XamForms.UserDialogs</id>
         <version>1.0.0</version>
-        <title>Xamarin Forms User Dialogs</title>
+        <title>User Dialogs for Xamarin Forms</title>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <description>Alert, Confirm, Prompt, Toast, Action Sheet, Loading, and Progress Dialogs calls for Xamarin Forms. Loading and Progress dialogs courtesy of AndHUD, BTProgressHUD, and Coding4Fun toolkit</description>
@@ -13,10 +13,10 @@
         <tags>xamarin forms dialogs</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.0, 1.1)" />
+                <dependency id="Xamarin.Forms" version="[1.0, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Coding4Fun.Toolkit.Controls" version="2.0.7" />
+                <dependency id="Coding4Fun.Toolkit.Controls" version="[2.0, 3.0)" />
             </group>
         </dependencies>
         <releaseNotes>
