* Moving settings into mobile library as it has no external dependencies (json.net does not count) * Restore abstract implementations for easier code now that issue with linker has been discovered * Add more samples * Settings is broken at the moment

--- a/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
+++ b/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
@@ -71,9 +71,11 @@
     <Compile Include="Logger.cs" />
     <Compile Include="MailService.cs" />
     <Compile Include="NetworkConnectionBroadcastReceiver.cs" />
+    <Compile Include="NetworkService.cs" />
     <Compile Include="PhoneService.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="TextToSpeechService.cs" />
   </ItemGroup>
   <ItemGroup>
