--- a/Acr.XamForms.Mobile.WindowsPhone/Acr.XamForms.Mobile.WindowsPhone.csproj
+++ b/Acr.XamForms.Mobile.WindowsPhone/Acr.XamForms.Mobile.WindowsPhone.csproj
@@ -91,8 +91,10 @@
     <Compile Include="FileViewer.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MailService.cs" />
+    <Compile Include="NetworkService.cs" />
     <Compile Include="PhoneService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="TextToSpeechService.cs" />
   </ItemGroup>
   <ItemGroup>
