--- a/Acr.XamForms.Mobile.iOS/Acr.XamForms.Mobile.iOS.csproj
+++ b/Acr.XamForms.Mobile.iOS/Acr.XamForms.Mobile.iOS.csproj
@@ -42,9 +42,11 @@
     <Compile Include="FileViewer.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MailService.cs" />
+    <Compile Include="NetworkService.cs" />
     <Compile Include="PhoneService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reachability.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="TextToSpeechService.cs" />
   </ItemGroup>
   <ItemGroup>
