--- a/Acr.XamForms.Mobile.WindowsPhone/Acr.XamForms.Mobile.WindowsPhone.csproj
+++ b/Acr.XamForms.Mobile.WindowsPhone/Acr.XamForms.Mobile.WindowsPhone.csproj
@@ -90,7 +90,7 @@
     <Compile Include="DeviceInfo.cs" />
     <Compile Include="FileViewer.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="MailService.cs" />
+    <None Include="MailService.cs" />
     <Compile Include="NetworkService.cs" />
     <Compile Include="PhoneService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
