--- a/Acr.XamForms.Mobile.iOS/Acr.XamForms.Mobile.iOS.csproj
+++ b/Acr.XamForms.Mobile.iOS/Acr.XamForms.Mobile.iOS.csproj
@@ -41,7 +41,7 @@
     <Compile Include="DeviceInfo.cs" />
     <Compile Include="FileViewer.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="MailService.cs" />
+    <None Include="MailService.cs" />
     <Compile Include="NetworkService.cs" />
     <Compile Include="PhoneService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
