--- a/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
+++ b/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
@@ -37,6 +37,8 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AbstractLogger.cs" />
+    <Compile Include="AbstractMailService.cs" />
     <Compile Include="AbstractSettings.cs" />
     <Compile Include="IDeviceInfo.cs" />
     <Compile Include="IFileViewer.cs" />
@@ -45,11 +47,10 @@
     <Compile Include="ISettings.cs" />
     <Compile Include="ISettingsDictionary.cs" />
     <Compile Include="ITextToSpeechService.cs" />
-    <Compile Include="LoggerExtensions.cs" />
-    <Compile Include="MailAddress.cs" />
-    <Compile Include="MailAttachment.cs" />
-    <Compile Include="MailExtensions.cs" />
-    <Compile Include="MailMessage.cs" />
+    <None Include="MailAddress.cs" />
+    <None Include="MailAttachment.cs" />
+    <None Include="MailExtensions.cs" />
+    <None Include="MailMessage.cs" />
     <Compile Include="AbstractNetworkService.cs" />
     <Compile Include="NetworkStatusChangedEventArgs.cs" />
     <Compile Include="ObservableDictionary.cs" />
