--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -4,7 +4,8 @@
         <id>Acr.XamForms.Mobile</id>
         <version>1.1.0</version>
         <title>Mobile Services for Xamarin Forms</title>
-        <description>Camera-Gallery Access, Geo-Location, E-Mail, Phone, and SMS for Xamarin Forms</description>
+        <!--<description>XPlat Camera-Gallery Access, Geo-Location, E-Mail, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>-->
+        <description>XPlat Camera-Gallery Access, Geo-Location, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
