--- a/nuspec/Acr.XamForms.nuspec
+++ b/nuspec/Acr.XamForms.nuspec
@@ -2,9 +2,9 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>Acr.XamForms</title>
-        <description>Base utilities library for Xamarin Forms</description>
+        <description>ACR utilities for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
@@ -12,7 +12,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>		
         <tags>xamarin</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.0, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.1, 2.0)" />
         </dependencies>
         <releaseNotes>
 1.0
