--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -2,10 +2,10 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.Mobile</id>
-        <version>1.1.0</version>
+        <version>1.0.0</version>
         <title>Mobile Services for Xamarin Forms</title>
-        <!--<description>XPlat Camera-Gallery Access, Geo-Location, E-Mail, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>-->
-        <description>XPlat Camera-Gallery Access, Geo-Location, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>
+        <!--<description>XPlat Camera-Gallery Access, Geo-Location, Settings, E-Mail, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>-->
+        <description>XPlat Camera-Gallery Access, Geo-Location, Settings, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
@@ -29,11 +29,12 @@ Initial Release
         <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\MonoAndroid\Acr.XamForms.Mobile.dll" />
         <file src="..\bin\Release\MonoAndroid\Acr.XamForms.Mobile.Droid.dll" target="lib\MonoAndroid\Acr.XamForms.Mobile.Droid.dll" />
         <file src="..\bin\Release\MonoAndroid\Xamarin.Mobile.dll" target="lib\MonoAndroid\Xamarin.Mobile.dll" />
-
+        
         <!-- touch -->
         <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\MonoTouch\Acr.XamForms.Mobile.dll" />
         <file src="..\bin\Release\MonoTouch\Acr.XamForms.Mobile.iOS.dll" target="lib\MonoTouch\Acr.XamForms.Mobile.iOS.dll" />
         <file src="..\bin\Release\MonoTouch\Xamarin.Mobile.dll" target="lib\MonoTouch\Xamarin.Mobile.dll" />
+        <file src="Bootstrap\MobileBootstrap.cs.pp" target="content\MonoTouch\Bootstrap\MobileBootstrap.cs.pp" />
 
         <!-- winphone -->
         <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\wp8\Acr.XamForms.Mobile.dll" />
