--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.Mobile</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>Mobile Services for Xamarin Forms</title>
         <!--<description>XPlat Camera-Gallery Access, Geo-Location, Settings, E-Mail, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>-->
         <description>XPlat Camera-Gallery Access, Geo-Location, Settings, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>
@@ -17,6 +17,9 @@
             <dependency id="Newtonsoft.Json" version="[6, 7)" />
         </dependencies>
         <releaseNotes>
+1.0.1
+Lazy load a few properties so that they can be used in viewmodel injection before xamarin forms has initialized its Forms.Context on droid
+
 1.0
 Initial Release
         </releaseNotes>
