More api cleanup Setting up new methods

--- a/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
+++ b/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
@@ -42,7 +42,7 @@
     <Compile Include="ConfirmConfig.cs" />
     <Compile Include="DateTimePromptConfig.cs" />
     <Compile Include="DateTimePromptResult.cs" />
-    <Compile Include="DurationConfig.cs" />
+    <Compile Include="DurationPromptConfig.cs" />
     <Compile Include="DurationPromptResult.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IUserDialogService.cs" />
