--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -4,8 +4,8 @@
         <id>Acr.XamForms.Mobile</id>
         <version>1.0.1</version>
         <title>Mobile Services for Xamarin Forms</title>
-        <!--<description>XPlat Camera-Gallery Access, Geo-Location, Settings, E-Mail, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>-->
-        <description>XPlat Camera-Gallery Access, Geo-Location, Settings, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>
+        <!--<description>XPlat Camera-Gallery Access, Geo-Location, Settings, E-Mail, Network Detection, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>-->
+        <description>XPlat Camera-Gallery Access, Geo-Location, Settings, Network Detection, Phone, SMS, File Opener, and Logging for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
